Corrected some links and added engine version for Heroku deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "portfolio-react",
-  "version": "0.1.0",
+  "engines": {
+    "node": "16.15.0"
+  },
+  "version": "0.9.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
